@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-27T08:27:16Z",
-  "count_outdated" : 428,
-  "uniques_outdated" : 234,
-  "count" : 445,
+  "timestamp" : "2022-04-27T16:35:11Z",
+  "count_outdated" : 430,
+  "uniques_outdated" : 235,
+  "count" : 446,
   "uniques" : 247,
   "clones" : [
-    {
-      "timestamp": "2022-04-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-04-18T00:00:00Z",
       "count": 9,
