@@ -1,12 +1,7 @@
 {
-  "count": 17,
+  "count": 16,
   "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2022-04-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-18T00:00:00Z",
       "count": 9,
